--- a/css/styles.css
+++ b/css/styles.css
@@ -1,59 +1,14 @@
-
 .nav-main {
     display: inline-flex;
-    flex-flow: row wrap;
     justify-content: space-around;
     align-content: center;
+    text-align: center;
     width: 100%;
     font-size: 2em;
 }
 
-.button-nav-main {
-    background: #FFF;
-    width: 50%;
-    max-width: 6em;
-    max-height: 2em;
-    margin-top: 2%;
-    display: inline-flex;
-    flex-flow: Wrap;
-    justify-content: space-around;
-    align-content: center;
-    text-align: center;
-    font-size: 1em;
-    font-weight: bolder;
-    font-family: monospace;
-
-}
-
-.welcome-text {
-    width: 90%;
-    height: 30%;
-    margin: auto;
-    margin-bottom: 5%;
-    padding: 2%;
-    margin-top: 2%;
-    text-align: center;
-    font-size: 2.5em;
-    background-color: #FFF;
-    color: #000;
-    font-family: monospace;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.6rem;
-}
-
-img {
-    max-width: 99%;
+body{
+	margin:20px;
 }
 
 h1 {
@@ -61,88 +16,175 @@ h1 {
     font-size: 10em;
     font-family: monospace;
     font-weight: bolder;
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
+
+.footer-distributed{
+	background-color: #292c2f;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: bold 16px sans-serif;
+
+	padding: 55px 50px;
+	margin-top: 80px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* Footer left */
+
+.footer-distributed .footer-left{
+	width: 40%;
+}
+
+/* The company logo */
+
+.footer-distributed h3{
+	color:  #ffffff;
+	font: normal 36px 'Cookie', cursive;
+	margin: 0;
+}
+
+.footer-distributed h3 span{
+	color:  #5383d3;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+	color:  #ffffff;
+	margin: 20px 0 12px;
+	padding: 0;
+}
+
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+	text-decoration: none;
+	color:  inherit;
+}
+
+.footer-distributed .footer-company-name{
+	color:  #8f9296;
+	font-size: 14px;
+	font-weight: normal;
+	margin: 0;
+}
+
+/* Footer Center */
+
+.footer-distributed .footer-center{
+	width: 35%;
+}
+
+.footer-distributed .footer-center i{
+	background-color:  #33383b;
+	color: #ffffff;
+	font-size: 25px;
+	width: 38px;
+	height: 38px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 42px;
+	margin: 10px 15px;
+	vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope{
+	font-size: 17px;
+	line-height: 38px;
+}
+
+.footer-distributed .footer-center p{
+	display: inline-block;
+	color: #ffffff;
+	vertical-align: middle;
+	margin:0;
+}
+
+.footer-distributed .footer-center p span{
+	display:block;
+	font-weight: normal;
+	font-size:14px;
+	line-height:2;
+}
+
+.footer-distributed .footer-center p a{
+	color:  #5383d3;
+	text-decoration: none;;
 }
 
 
-.about-text {
-    width: 50%;
-    height: 30%;
-    justify-content: center;
-    align-content: center;
+/* Footer Right */
+
+.footer-distributed .footer-right{
+	width: 20%;
 }
 
-.about-image {
-    width: 50%;
-    height: 30%;
-    justify-content: center;
-    align-content: center
+.footer-distributed .footer-company-about{
+	line-height: 20px;
+	color:  #92999f;
+	font-size: 13px;
+	font-weight: normal;
+	margin: 0;
 }
 
-.contact-form {
-    width: 100%;
-    height: 40%;
-    background-color: #CCC;
+.footer-distributed .footer-company-about span{
+	display: block;
+	color:  #ffffff;
+	font-size: 14px;
+	font-weight: bold;
+	margin-bottom: 20px;
 }
 
-
-.container {
-    width: 100%;
-    display: grid;
-    /* grid-template: filas / columnas;*/
-    grid-template: 100px 1fr 100px / 400px 1fr;
-    grid-area: "main right";
+.footer-distributed .footer-icons{
+	margin-top: 25px;
 }
 
-header {
-    grid-area: header;
+.footer-distributed .footer-icons a{
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	cursor: pointer;
+	background-color:  #33383b;
+	border-radius: 2px;
+
+	font-size: 20px;
+	color: #ffffff;
+	text-align: center;
+	line-height: 35px;
+
+	margin-right: 3px;
+	margin-bottom: 5px;
 }
 
-.left {
-    grid-area: left;
-}
+/* If you don't want the footer to be responsive, remove these media queries */
 
-footer {
-    grid-area: footer;
-}
+@media (max-width: 880px) {
 
-.grid-container {
-    display: grid;
-    grid-template-areas: 'left right';
-    background-color: #000;
-    justify-content: space-around;
-    align-content: center;
-    color: white;
-}
+	.footer-distributed{
+		font: bold 14px sans-serif;
+	}
 
-.contenedor {
-    max-width: 1200px;
-    width: 95%;
-    margin: 0 auto;
-    margin-bottom: 5%;
-}
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-center,
+	.footer-distributed .footer-right{
+		display: block;
+		width: 100%;
+		margin-bottom: 40px;
+		text-align: center;
+	}
 
-.entrada-blog {
-    display: inline-block;
-    background-color: white;
-    padding: 10px 20px;
-    text-decoration: none;
-    text-transform: capitalize;
-    font-family: monospace;
-    color: #000;
-    font-size: 2.5em;
-    align-items: center;
-}
+	.footer-distributed .footer-center i{
+		margin-left: 0;
+	}
 
-.entrada-blog a:hover {
-    background-color: black;
-    transition: 0.3s;
 }
-
-@media (min-width:480px) {
-    .dos-columnas {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 1rem;
-    }
-}
-
