--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,10 @@ h1 {
     font-size: 10em;
     font-family: monospace;
     font-weight: bolder;
-	margin-top: 2em;
-	margin-bottom: 2em;
+}
+
+.main-text {
+	text-align: center;
 }
 
 .footer-distributed{
