--- a/css/styles.css
+++ b/css/styles.css
@@ -1,81 +1,160 @@
-.nav-main {
-    display: inline-flex;
-    justify-content: space-around;
-    align-content: center;
-    text-align: center;
-    width: 100%;
-    font-size: 2em;
+:root {
+	font-size: 16px;
+	/* Tamaño base de Fuentes */
 }
 
-body{
-	margin:20px;
+.nav-main {
+	display: inline-flex;
+	justify-content: space-around;
+	align-content: center;
+	text-align: center;
+	width: 100%;
+	font-size: 2em;
+}
+
+body {
+	margin: 20px;
 }
 
 h1 {
-    text-align: center;
-    font-size: 10em;
-    font-family: monospace;
-    font-weight: bolder;
+	text-align: center;
+	font-size: 10em;
+	font-family: monospace;
+	font-weight: bolder;
+	margin-top: 20px;
 }
 
 .main-text {
 	text-align: center;
 }
 
-.footer-distributed{
+.main-text-container {
+	margin-bottom: 50px;
+}
+
+.about-row1 {
+	margin-bottom: 50px;
+}
+
+.form-container {
+	margin-bottom: 50px;
+}
+
+/************ FORMULARIO ************/
+
+#myform {
+	margin-top: 1em;
+	background-color: #92999f;
+
+}
+.form-container {
+	border: #000;
+	border-width: 1em;
+	margin: 2em;
+}
+
+.form-container .input_field {
+	margin: 1em;
+}
+
+.form-container .input_field input[type="text"],
+
+.form-container textarea {
+	border: 1px solid #e0e0e0;
+	width: 100%;
+	padding: 0.5em;
+}
+
+.form-container textarea {
+	resize: none;
+	height: 10em;
+}
+
+.form-container .btn input [type="submit"] {
+	border: 0px;
+	margin-top: 1em;
+	padding: 1em;
+	width: 100%;
+	background: #000;
+	color: #ffffff;
+	text-transform: uppercase;
+	text-align: center;
+	letter-spacing: 5px;
+	font-weight: bold;
+	border-radius: 25px;
+	cursor: pointer;
+	float: right;
+}
+
+.pull-right {
+	float: right;
+}
+
+#error_message {
+	margin-bottom: 1em;
+	margin-top: 1em;
+	transition: all 0.5s ease;
+	background: rgba(255, 35, 35, 0.826);
+	color: white;
+	text-align: center;
+	font-size: 2em;
+}
+
+/************ FOOTER ************/
+
+.footer-distributed {
 	background-color: #292c2f;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
-
 	padding: 55px 50px;
 	margin-top: 80px;
 }
 
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
-.footer-distributed .footer-right{
+.footer-distributed .footer-right {
 	display: inline-block;
 	vertical-align: top;
 }
 
 /* Footer left */
 
-.footer-distributed .footer-left{
+.footer-distributed .footer-left {
 	width: 40%;
 }
 
 /* The company logo */
 
-.footer-distributed h3{
-	color:  #ffffff;
+.footer-distributed h3 {
+	color: #ffffff;
 	font: normal 36px 'Cookie', cursive;
 	margin: 0;
 }
 
-.footer-distributed h3 span{
-	color:  #5383d3;
+.footer-distributed h3 span {
+	color: #5383d3;
 }
 
 /* Footer links */
 
-.footer-distributed .footer-links{
-	color:  #ffffff;
+.footer-distributed .footer-links {
+	color: #ffffff;
 	margin: 20px 0 12px;
 	padding: 0;
 }
 
-.footer-distributed .footer-links a{
-	display:inline-block;
+.footer-distributed .footer-links a {
+	display: inline-block;
 	line-height: 1.8;
 	text-decoration: none;
-	color:  inherit;
+	color: inherit;
 }
 
-.footer-distributed .footer-company-name{
-	color:  #8f9296;
+.footer-distributed .footer-company-name {
+	color: #8f9296;
 	font-size: 14px;
 	font-weight: normal;
 	margin: 0;
@@ -83,12 +162,12 @@ h1 {
 
 /* Footer Center */
 
-.footer-distributed .footer-center{
+.footer-distributed .footer-center {
 	width: 35%;
 }
 
-.footer-distributed .footer-center i{
-	background-color:  #33383b;
+.footer-distributed .footer-center i {
+	background-color: #33383b;
 	color: #ffffff;
 	font-size: 25px;
 	width: 38px;
@@ -100,63 +179,64 @@ h1 {
 	vertical-align: middle;
 }
 
-.footer-distributed .footer-center i.fa-envelope{
+.footer-distributed .footer-center i.fa-envelope {
 	font-size: 17px;
 	line-height: 38px;
 }
 
-.footer-distributed .footer-center p{
+.footer-distributed .footer-center p {
 	display: inline-block;
 	color: #ffffff;
 	vertical-align: middle;
-	margin:0;
+	margin: 0;
 }
 
-.footer-distributed .footer-center p span{
-	display:block;
+.footer-distributed .footer-center p span {
+	display: block;
 	font-weight: normal;
-	font-size:14px;
-	line-height:2;
+	font-size: 14px;
+	line-height: 2;
 }
 
-.footer-distributed .footer-center p a{
-	color:  #5383d3;
-	text-decoration: none;;
+.footer-distributed .footer-center p a {
+	color: #5383d3;
+	text-decoration: none;
+	;
 }
 
 
 /* Footer Right */
 
-.footer-distributed .footer-right{
+.footer-distributed .footer-right {
 	width: 20%;
 }
 
-.footer-distributed .footer-company-about{
+.footer-distributed .footer-company-about {
 	line-height: 20px;
-	color:  #92999f;
+	color: #92999f;
 	font-size: 13px;
 	font-weight: normal;
 	margin: 0;
 }
 
-.footer-distributed .footer-company-about span{
+.footer-distributed .footer-company-about span {
 	display: block;
-	color:  #ffffff;
+	color: #ffffff;
 	font-size: 14px;
 	font-weight: bold;
 	margin-bottom: 20px;
 }
 
-.footer-distributed .footer-icons{
+.footer-distributed .footer-icons {
 	margin-top: 25px;
 }
 
-.footer-distributed .footer-icons a{
+.footer-distributed .footer-icons a {
 	display: inline-block;
 	width: 35px;
 	height: 35px;
 	cursor: pointer;
-	background-color:  #33383b;
+	background-color: #33383b;
 	border-radius: 2px;
 
 	font-size: 20px;
@@ -172,20 +252,20 @@ h1 {
 
 @media (max-width: 880px) {
 
-	.footer-distributed{
+	.footer-distributed {
 		font: bold 14px sans-serif;
 	}
 
 	.footer-distributed .footer-left,
 	.footer-distributed .footer-center,
-	.footer-distributed .footer-right{
+	.footer-distributed .footer-right {
 		display: block;
 		width: 100%;
 		margin-bottom: 40px;
 		text-align: center;
 	}
 
-	.footer-distributed .footer-center i{
+	.footer-distributed .footer-center i {
 		margin-left: 0;
 	}
 
